<resources>
    <string name="app_name">Rootine</string>
    <string name="loading_routines">Loading routines...</string>
    <string name="run_next_routine">Run next scheduled routine</string>
    <string name="manage_routines">Manage routines</string>
    <string name="add_routine">Add routine</string>
    <string name="routine_name">Routine name:</string>
    <string name="routine_name_hint">E.g. \"Clean room\"</string>
    <string name="days_active">Days active:</string>
    <string name="monday">M</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="day_not_active">---</string>
    <string name="timed">Include start time?</string>
    <string name="start_time">Start time:</string>
    <string name="priority">Priority—for routines which have no start time and occur on the same day, 0 goes first, 9 last:</string>
    <string name="add_task">Add task</string>
    <string name="done">Done</string>
    <string name="duration">Duration:</string>
    <string name="duration_hint">Minutes to complete task</string>
    <string name="command">Command:</string>
    <string name="command_hint">E.g. \"Make your bed\"</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="delete_task">Delete Task</string>
    <string name="default_start_time">12:00 AM</string>
    <string name="default_priority">0</string>
    <string name="user_name_label">What\'s your name?</string>
    <string name="preferences_file">com.github.jhudis.rootine.PREFERENCE_FILE</string>
    <string name="user_name">com.github.jhudis.rootine.USER_NAME</string>
    <string name="notification_channel_name">Running routines</string>
    <string name="notification_channel_description">Display running routine</string>
    <string name="notification_channel_id">com.github.jhudis.rootine.NOTIFICATION</string>
    <string name="notification_title">Routine in progress</string>
    <string name="routine_id_extra">com.github.jhudis.rootine.ROUTINE_ID</string>
    <string name="task_id_extra">com.github.jhudis.rootine.TASK_ID</string>
    <string name="task_extra">com.github.jhudis.rootine.TASK</string>
    <string name="text_to_speech_id">com.github.jhudis.rootine.TTS</string>
    <string name="untitled_task">Untitled task</string>
    <string name="untitled_routine">Untitled routine</string>
    <string name="delete_routine_dialogue_title">Delete Routine</string>
    <string name="delete_routine_dialogue_message">Do you really want to delete this routine?</string>
    <string name="user_name_hint">(Who will be completing routines?)</string>
    <string name="run_routine_instruction">Click on a routine\nbelow to run it!</string>
    <string name="no_runnable_routines">You don\'t have any\nroutines set to run today.\nClick \"Manage Routines\" below\nto add more routines!</string>
</resources>
