<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRoutine">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/routine_name"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/routine_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/days_active_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/days_active"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <LinearLayout
        android:id="@+id/days_active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days_active_label">

        <ToggleButton
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textOff="@string/sunday"
            android:textOn="@string/sunday"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textOff="@string/monday"
            android:textOn="@string/monday"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:textAllCaps="false"
            android:textOff="@string/tuesday"
            android:textOn="@string/tuesday"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textOff="@string/wednesday"
            android:textOn="@string/wednesday"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:textAllCaps="false"
            android:textOff="@string/thursday"
            android:textOn="@string/thursday"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textOff="@string/friday"
            android:textOn="@string/friday"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textOff="@string/saturday"
            android:textOn="@string/saturday"
            android:textSize="24sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/timed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onTimedCheckboxClicked"
        android:text="@string/timed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days_active" />

    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/start_time"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/timed"
        app:layout_constraintEnd_toStartOf="@+id/start_time" />

    <EditText
        android:id="@+id/start_time"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:maxLength="8"
        android:text="@string/default_start_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/start_time_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="addTask"
        android:text="@string/add_task"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time" />

    <fragment
        android:id="@+id/task_list"
        android:name="com.github.jhudis.rootine.TaskFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_task" />

    <Button
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="done"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_routine"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_routine"
        android:layout_width="74dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:onClick="deleteRoutine"
        android:paddingVertical="0dp"
        android:text="@string/delete_routine"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/done" />

</android.support.constraint.ConstraintLayout>