<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <EditText
        android:id="@+id/command"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/command_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/command_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/command_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/command"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/command"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/duration"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/duration"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/duration_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/duration_label"
        app:layout_constraintTop_toBottomOf="@+id/command" />

    <Button
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="done"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_task"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_task"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="deleteTask"
        android:paddingVertical="0dp"
        android:text="@string/delete_task"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/done"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>